<resources>
    <string name="app_name">SpaceToon</string>
    <string name="text_name">Jolly Adam</string>
    <string name="email">email@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="theme">Theme</string>
    <string name="welcome_message">Hello , Good Morning</string>
    <string name="name">Jolly</string>
    <string name="search_here">search here</string>
    <string name="recommended">Recommended</string>
    <string name="see_all">see all</string>
    <string name="trending">Trending</string>
    <string name="airing_today">Airing Today</string>
    <string name="adventure">Adventure</string>
    <string name="email_content">email</string>
    <string name="email_helper">you can use letters, numbers &amp; periods</string>
    <string name="password_content">password</string>
    <string name="password_helper">use 8 or more characters with a mix of letters, numbers &amp; symbols</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Sign In</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact">contact</string>
    <string name="logout">logout</string>
    <string name="about">about</string>
    <string name="language">language</string>
</resources>